style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
body{
    line-height: 1.5;
    background-color: #111827;
    font-family: "Poppins", sans-serif;
}

input, button, textarea, select {
  font: inherit;
}

header{
    height: 150px;
    background-color: #0f172a;
    color: #f8fafc;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: "Roboto", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

main{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    gap: 60px;
}

.search-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 40px;
}

.input-container{
    border: none;
    background-color: #1f2937;
    height: 150px;
    width: 400px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-direction: column;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
    border-radius: 24px;
}

.input-container input{
    height: 2.4rem;
    border: none;
    border-radius: 24px;
    text-align: center;
    background-color: #111827;
    color: #f9fafb;
    transition: all 0.2s ease;
}
.input-container input:focus{
    border: 1px solid #3b82f6;
    box-shadow: 0 0 0 rpx rgba(59, 130, 246, 0.3);
}

.input-container button {
    height: 2rem;
    width: 150px;
    border-radius: 24px;
    border: none;
    background-color: #0ea144; 
    color: #022c22;
    transition:all 0.3s ease ;
}

.input-container button:hover{
    transform: translateY(-2px);
    background-color: #19c558;
}
s


#result-list{
    list-style:none;
}

#result-list li {
    list-style: none;
    background-color: #1e293b;
    color: #f1f5f9;
    border-bottom: 1px solid black; 
    padding: 12px 14px;
    border-radius: 8px;

    cursor: pointer;
    transition: all 0.2s ease;
}
#result-list li:hover{
    transform: translateY(-4px);
    background-color: #334155;
}
.resultlist-container{
    height: 360px;
    overflow-y: auto;
    border-bottom: 1px solid #374151; 
    border-radius: 14px;

}

#ingredient-list{
    list-style:none;
    overflow-y: auto;
    
}

#ingredient-list li {

    list-style: none;
    background-color: #273548;
    color: #e2e8f0;
    border-bottom: 1px solid #334155;

    border-bottom: 1px solid black; 
    padding: 12px 14px;
    border-radius: 8px;

    cursor: pointer;
    transition: all 0.2s ease;
    display: flex;
    flex-direction: column;
    height: 120px;
    max-width: 100%;
    white-space: normal;
    overflow-wrap: break-word;
    word-break: break-word;
    margin: 11px;
    
}

#ingredient-list li:hover{
    background-color: #334155;
}

.ingredients-container{
    height: 400px;
    background-color: #1f2937;
    border-bottom: 1px solid #374151; 
    border-radius: 14px;
    overflow-y: auto;
}




@media(max-width:768px)
{
    main{
        flex-direction: column;
    }
}


#sum{
    width: 100%;
    height: 50px;
    color: white;
    background-color: #1f2937;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    margin-top: 40px;
}

